# my-gentoo

app-accessibility/ekho/: Manifest  ekho-4.8.ebuild
app-accessibility/espeak/: Manifest  espeak-1.46.02.ebuild
app-accessibility/festival/: Manifest  festival-2.1-r1.ebuild  hts21compat-howto
app-accessibility/festival-hts/: Manifest  festival-hts-2.1-r1.ebuild
app-dicts/myspell-vi/: Manifest  myspell-vi-20080604.ebuild
app-misc/espeakedit/: Manifest  espeakedit-1.46.02.ebuild
app-misc/espeakedit/files/: Makefile.in  configure.ac  format.diff
app-misc/gnote/: Manifest  gnote-0.7.6.ebuild
app-misc/posterazor/: posterazor-1.5.ebuild  posterazor-1.5.ebuild_
app-office/b2uconverter/: Manifest  b2uconverter-10.01.3.ebuild  b2uconverter-10.01.4.ebuild  b2uconverter-10.02.ebuild
app-office/slideshoq/: Manifest  slideshoq-9999.ebuild
app-text/calibre/: Manifest  calibre-0.8.41.ebuild
app-text/cherrytree/: Manifest  cherrytree-0.25.4.ebuild  cherrytree-0.26.3.ebuild
app-text/gimagereader/: Manifest  gimagereader-0.9.ebuild
app-text/sfk/: Manifest  sfk-1.6.4.ebuild
app-text/tesseract/: Manifest  tesseract-3.01.ebuild
dev-lang/lazarus/: Manifest  lazarus-1.0.4.ebuild
dev-python/key-mon/: Manifest  key-mon-1.13.ebuild
dev-util/skipfish/: Manifest  skipfish-2.09_beta.ebuild
games-arcade/: performous
games-arcade/performous/: Manifest  performous-0.6.0.ebuild
games-emulation/desmume/: Manifest  desmume-0.9.8.ebuild
gnome-extra/nautilus-image-converter/: Manifest  nautilus-image-converter-0.3.0.ebuild
gnome-extra/nautilus-terminal/: Manifest  nautilus-terminal-0.7.1.ebuild
gnome-extra/nm-applet/: Manifest
media-gfx/blender/: Manifest  blender-2.60a.ebuild  blender-2.61-r1.ebuild  blender-2.61-r2.ebuild  (+3 more)
profiles/: repo_name
(+43 files in other folders)
